# frost

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Ast-Parser-Asm.html  Ast-Parser-Expr.html  Ast-Parser-Literal.html  Ast-Parser-PreProcessor-Define.html  Ast-Parser-PreProcessor-Import.html  Ast-Parser-PreProcessor.html  Ast-Parser-Program.html  Ast-Parser-State.html  Ast-Parser-Type.html  Ast-Parser-TypeDefinition.html  Ast-Parser-Utils.html  Ast-Parser.html  Ast-Types.html  BNF.md  Codegen-Codegen.html  Codegen-Errors.html  Codegen-ExprGen-Assembly.html  Codegen-ExprGen-Cast.html  Codegen-ExprGen-ControlFlow.html  Codegen-ExprGen-DataValue.html  Codegen-ExprGen-ExprGen.html  Codegen-ExprGen-Function.html  Codegen-ExprGen-Global.html  Codegen-ExprGen-Operator.html  Codegen-ExprGen-Types.html  Codegen-ExprGen-Variable.html  Codegen-State.html  Codegen-Utils.html  LICENSE  Makefile  README.md  Shared-Utils.html  cabal.project  doc-index-A.html  doc-index-All.html  doc-index-B.html  (+26 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: coverage.yaml  release.yaml
app/: Main.hs
demo/: .gitignore  Makefile  README.md  add.lisp  add.scm  defs.h  runtime.c
docs/: BNF.md  README.md  SUMMARY.md  book.json
docs/developer-manual/: about.md  overview.md
docs/developer-manual/advanced/: cross-platform.md  llvm-ir-optimization.md
docs/developer-manual/architecture/: compiler-structure.md  llvm-integration.md
docs/developer-manual/compilation-process/: building-ast.md  code-generation.md
docs/developer-manual/contributing/: building-from-source.md  coding-standards.md  testing-guidelines.md
docs/developer-manual/extending/: custom-operators.md  new-keywords.md  new-types.md  standard-library.md
docs/developer-manual/inspiration/: design-philosophy.md  language-influences.md
docs/developer-manual/security/: memory-management.md  type-safety.md
docs/user-manual/: README.md  basic-concepts.md  getting-started.md
docs/user-manual/syntax/: README.md  advanced-types.md  backus-naur-form.md  basic-types.md  binary-operators.md  composite-types.md  expression-nodes.md  inline-assembly.md  unary-operators.md
examples/: README.md  array.ff  bound.scm  builtins.scm  call.scm  donut.ff  echo.ff  error.scm  fortytwo.scm  function.scm  globals_variable.ff  graphical.ff  hello.ff  if.scm  julia.ff  lambdas.scm  mandelbrot.ff  mobius.ff  number.scm  pow.scm  putstr.ff  sierpinski.ff  sine.ff  sum_aarm64.ff  variable.scm
examples/echo/: main.ff
examples/std/: inet.ff  io.ff  lib.ff  math.ff  opengl.ff  sdl2.ff  socket.ff  string.ff  uni.ff
lib/: Misc.hs
lib/Ast/: Env.hs  Literal.hs  Operation.hs  Parser.hs  Tokenizer.hs  Types.hs  UnaryOperation.hs  Utils.hs
lib/Ast/Parser/: Asm.hs  Env.hs  Expr.hs  Import.hs  Literal.hs  Operation.hs  PreProcessor.hs  Program.hs  State.hs  Type.hs  TypeDefinition.hs  UnaryOperation.hs  Utils.hs
lib/Ast/Parser/PreProcessor/: Define.hs  Import.hs
lib/Codegen/: Codegen.hs  Errors.hs  ExprGen.hs  State.hs  Utils.hs
lib/Codegen/ExprGen/: Assembly.hs  Cast.hs  ControlFlow.hs  DataValue.hs  ExprGen.hs  ExprGen.hs-boot  Function.hs  Global.hs  Operator.hs  Types.hs  Variable.hs
lib/Shared/: Utils.hs
lib/ast/: Types.hs
llvm-ir-poc/: .gitignore  Makefile  README.md
llvm-ir-poc/src/: add.ll  defs.h  main.c
scripts/: publish-coverage.ts
src/: Ast.Parser.Asm.html  Ast.Parser.Expr.html  Ast.Parser.Literal.html  Ast.Parser.PreProcessor.Define.html  Ast.Parser.PreProcessor.Import.html  Ast.Parser.PreProcessor.html  Ast.Parser.Program.html  Ast.Parser.State.html  Ast.Parser.Type.html  Ast.Parser.TypeDefinition.html  Ast.Parser.Utils.html  Ast.Parser.html  Ast.Types.html  Codegen.Codegen.html  Codegen.Errors.html  Codegen.ExprGen.Assembly.html  Codegen.ExprGen.Cast.html  Codegen.ExprGen.ControlFlow.html  Codegen.ExprGen.DataValue.html  Codegen.ExprGen.ExprGen.html  Codegen.ExprGen.Function.html  Codegen.ExprGen.Global.html  Codegen.ExprGen.Operator.html  Codegen.ExprGen.Types.html  Codegen.ExprGen.Variable.html  Codegen.State.html  Codegen.Utils.html  Shared.Utils.html
test/Ast/: LiteralSpec.hs  OperationSpec.hs  ParserSpec.hs  TokenizerSpec.hs  TypesSpec.hs  UnaryOperationSpec.hs
test/Ast/Parser/: AsmSpec.hs  ExprSpec.hs  LiteralSpec.hs  OperationSpec.hs  TypeDefinitionSpec.hs  TypeSpec.hs  UnaryOperationSpec.hs
test/Codegen/: CodegenSpec.hs  ErrorsSpec.hs  StateSpec.hs  UtilsSpec.hs
test/Codegen/ExprGen/: AssemblySpec.hs  CastSpec.hs  ControlFlowSpec.hs  DataValueSpec.hs  FunctionSpec.hs  GlobalSpec.hs  OperatorSpec.hs  StateSpec.hs  VariableSpec.hs
test/Misc/: MiscSpec.hs
test/Shared/: UtilsSpec.hs
